# AI-TicTacToe

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  test_functions.cpp  test_functions.h  tictacAI.cpp  tictacAI.h
board/: board.cpp  board.h  gameBoard.cpp  gameBoard.h
src/: main.cpp  tictacAI.cpp  tictacAI.h
src/ai/: dynamicCounterAI.cpp  dynamicCounterAI.h  minMaxAI.cpp  minMaxAI.h  opponentAI.h  prunedAI.cpp  prunedAI.h
src/board/: board.cpp  board.h  gameBoard.cpp  gameBoard.h
src/tests/: test_functions.cpp  test_functions.h
tests/: test_functions.cpp
